# spot

./: .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile.lcd-cpp  LCD_GPIO_CHANGES.md  README.md  base_to_footprint.yaml  build_lcd_cpp.sh  build_spot_lcd.sh  build_updated_lcd.sh  champ_bridge.py  cmd_mux.py  commit_changes.sh  deploy_to_rancher.sh  deployment.yaml  fleet.yaml  footprint_to_odom.yaml  gait_ros2.yaml  hcsr04.yaml  i2c-bootstrap.yaml  joints_ros2.yaml  kustomization.yaml  lcd.yaml  lcd1602.py  lcd_new.yaml  lcd_ros2_deployment.yaml  node_label_config.py  performance-setup.yaml  servo_driver.py  setup_dev_environment.sh  spot_cli.py  stereo-c270.yaml  test_gpio_changes.cpp  update_k8s.sh  vision-2d.yaml
.github/workflows/: build.yml  champ-bridge-image.yml  champ-image.yml  cmd-mux-image.yml  github-cli-operations.yml  hcsr04-image.yml  lcd-image.yml  node-label-config-image.yml  servo-driver-image.yml  stereo-c270-image.yml
bundles/ros2-smoke/: 00-namespace.yaml  10-ros2-smoke-deployment.yaml  fleet.yaml
champ/: gait_ros2.yaml  links_ros2.yaml
docker/champ/: Dockerfile  entrypoint.sh
docker/champ-bridge/: Dockerfile.cpp
docker/cmd-mux/: Dockerfile.cpp
docker/hcsr04/: Dockerfile.cpp
docker/lcd/: Cargo.no-ros2.toml  Dockerfile  Dockerfile.arm64  Dockerfile.cpp  Dockerfile.min  Dockerfile.pure  Dockerfile.ros2  Dockerfile.simple  Dockerfile.single  Dockerfile.standalone  README.md
docker/lcd/ros2/: Dockerfile
docker/node-label-config/: Dockerfile.cpp
docker/servo-driver/: Dockerfile.cpp
docker/stereo-c270/: Dockerfile
k8s/: lcd_deployment.yaml
legacy/python/: champ_bridge.py
scripts/: setup-github-cli.sh
spot_champ_bridge_cpp/: CMakeLists.txt  package.xml
spot_champ_bridge_cpp/src/: main.cpp
spot_cmd_mux_cpp/: CMakeLists.txt  package.xml
spot_cmd_mux_cpp/src/: main.cpp
spot_hcsr04_cpp/: CMakeLists.txt  package.xml
spot_hcsr04_cpp/src/: main.cpp
spot_lcd_cpp/: CMakeLists.txt  package.xml
spot_lcd_cpp/config/: lcd_config.toml
spot_lcd_cpp/include/: spot_lcd_node.h
spot_lcd_cpp/launch/: all_nodes_launch.py  lcd_launch.py  temperature_launch.py  uptime_launch.py
spot_lcd_cpp/scripts/: run_node.sh
spot_lcd_cpp/src/: config.cpp  lcd_core.cpp  lcd_display_service.cpp  lcd_node.cpp  main.cpp  ros_main.cpp  temp_monitor.cpp  temperature_node.cpp  uptime_monitor.cpp  uptime_node.cpp
spot_lcd_node/: .env.example  .gitignore  Cargo.toml  Cargo.toml.ros2  Cargo.toml.standalone  package.xml
spot_lcd_node/config/: lcd_config.toml
spot_lcd_node/docker/lcd/: Dockerfile
spot_lcd_node/pure_standalone/: Cargo.toml  main.rs
spot_lcd_node/pure_standalone/lcd_core/: mod.rs
spot_lcd_node/pure_standalone/lcd_display_service/: mod.rs
spot_lcd_node/pure_standalone/uptime_monitor/: mod.rs
spot_lcd_node/src/: main.rs
spot_lcd_node/standalone/src/: main.rs
spot_lcd_node/standalone/src/config/: mod.rs
spot_lcd_node/standalone/src/ros_publisher/: mod.rs
spot_lcd_node/standalone/src/temp_monitor/: mod.rs
spot_node_label_config_cpp/: CMakeLists.txt  package.xml
spot_node_label_config_cpp/include/spot_node_label_config_cpp/adapters/: k8s_labels_source.hpp  ros_string_publisher.hpp
spot_node_label_config_cpp/include/spot_node_label_config_cpp/application/: publish_servo_map_uc.hpp
spot_node_label_config_cpp/include/spot_node_label_config_cpp/domain/: label_parser.hpp  servo_map.hpp
spot_node_label_config_cpp/include/spot_node_label_config_cpp/ports/: labels_source.hpp  servo_map_publisher.hpp
spot_node_label_config_cpp/src/: main.cpp
spot_node_label_config_cpp/src/adapters/: k8s_labels_source.cpp  ros_string_publisher.cpp
spot_node_label_config_cpp/src/application/: publish_servo_map_uc.cpp
spot_node_label_config_cpp/src/domain/: label_parser.cpp
spot_servo_driver_cpp/: CMakeLists.txt  package.xml
spot_servo_driver_cpp/src/: main.cpp
